Chore: alteração sobre mim

--- a/index.html
+++ b/index.html
@@ -45,17 +45,8 @@
             <div class="col-12 col-md-7 align-self-center text-light text-center text-md-start">
                 <h1>José Lucas Sousa Ferreira</h1>
                 <h3 class="fs-5" style="color: #352EF2;">Desenvolvedor de Software</h3>
-                <p class="fs-lg-5" style="color: #969696">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap
-                    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with
-                    the
-                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing
-                    software like Aldus PageMaker including versions of Lorem Ipsum.
+                <p class="fs-lg-5">
+                    Olá bem vindo ao meu portfolio! Me chamo Lucas e estou cursando Análise e desenvolvimento de sistemas, tenho certificação AWS Certified Cloud Pratitioner. Estou em transição de carreira da área de Redes de Computadores para o desenvolvimento. Fique a vontade para olhar meus projetos e se precisar pode entrar em contato comigo. 😎
                 </p>
                 <button type="button" class="btn btn-primary onmousehover"><i class="bi bi-arrow-down-circle"></i>
                     Baixar
