Chore: alteração do botão curriculo

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <p class="fs-lg-5">
                     Olá bem vindo ao meu portfolio! Me chamo Lucas e estou cursando Análise e desenvolvimento de sistemas, tenho certificação AWS Certified Cloud Pratitioner. Estou em transição de carreira da área de Redes de Computadores para o desenvolvimento. Fique a vontade para olhar meus projetos e se precisar pode entrar em contato comigo. 😎
                 </p>
-                <button type="button" class="btn btn-primary onmousehover"><i class="bi bi-arrow-down-circle"></i>
+                <a class="btn btn-primary onmousehover" href="https://tinyurl.com/3w56havk"><i class="bi bi-arrow-down-circle"></i>
                     Baixar
-                    Currículo</button>
+                    Currículo</a>
             </div>
         </div>
     </div>
