--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-12 col-lg-5 mb-md-5" data-bs-theme="dark">
                 <div class="card p-3">
-                    <form>
+                    <form id="contactForm" action="/sendEmail" method="POST">
                         <div class="form-floating mb-2">
                             <input type="text" class="form-control" id="InputNome" placeholder="Nome">
                             <label for="InputNome">Nome</label>
@@ -76,6 +76,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
