--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucas - Contate-me</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -43,18 +44,17 @@
         <div class="row">
             <div class="col-12 col-lg-5 mb-md-5" data-bs-theme="dark">
                 <div class="card p-3">
-                    <form id="contactForm" action="/sendEmail" method="POST">
+                    <form action="https://formsubmit.co/lucassousasertania@gmail.com" method="POST">
                         <div class="form-floating mb-2">
-                            <input type="text" class="form-control" id="InputNome" placeholder="Nome">
+                            <input type="text" class="form-control" id="InputNome" placeholder="Nome" name="name">
                             <label for="InputNome">Nome</label>
                         </div>
                         <div class="form-floating mb-2">
-                            <input type="email" class="form-control" id="InputEmail" placeholder="Email">
+                            <input type="email" class="form-control" id="InputEmail" placeholder="Email" name="email">
                             <label for="InputEmail">Email</label>
                         </div>
                         <div class="form-floating mb-2">
-                            <textarea class="form-control" placeholder="Deixe sua mensagem" id="InputMensagem"
-                                style="height: 150px"></textarea>
+                            <input class="form-control" placeholder="Deixe sua mensagem" id="InputMensagem" name="message"></input>
                             <label for="InputMensagem">Mensagem</label>
                         </div>
                         <button type="submit" class="btn btn-primary onmousehover">Enviar</button>
@@ -76,7 +76,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
