--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,9 +42,9 @@
 
         <h2 class="text-light">Contate-me</h2>
         <div class="row">
-            <div class="col-12 col-lg-5 mb-md-5" data-bs-theme="dark">
+            <div class="col-12 col-lg-5 mb-sm-5" data-bs-theme="dark">
                 <div class="card p-3">
-                    <form action="https://formsubmit.co/lucassousasertania@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/lucassousasertania@gmail.com" target="_blank" method="POST">
                         <div class="form-floating mb-2">
                             <input type="text" class="form-control" id="InputNome" placeholder="Nome" name="name">
                             <label for="InputNome">Nome</label>
@@ -53,8 +53,8 @@
                             <input type="email" class="form-control" id="InputEmail" placeholder="Email" name="email">
                             <label for="InputEmail">Email</label>
                         </div>
-                        <div class="form-floating mb-2">
-                            <input class="form-control" placeholder="Deixe sua mensagem" id="InputMensagem" name="message"></input>
+                        <div class="form-floating mb-2" >
+                            <textarea class="form-control form-control-lg" placeholder="Deixe sua mensagem" id="InputMensagem" name="message" rows="5" style="height: 180px;"></textarea>
                             <label for="InputMensagem">Mensagem</label>
                         </div>
                         <button type="submit" class="btn btn-primary onmousehover">Enviar</button>
@@ -62,11 +62,15 @@
                 </div>
             </div>
             <div class="col-12 col-lg-7 h-90">
+                <div class="text-center mt-3 mt-md-4 mb-3">
+                    <img src="/images/1713488629997.jpg" class="img-fluid rounded-circle w-25 mb-2">
+                    <h3 style="color: white;">José Lucas Sousa Ferreira</h3>
+                </div>
                 <div class="card" data-bs-theme="dark">
                     <div class="card-header text-center fs-3">
                         Me encontre nas redes sociais!
                     </div>
-                    <div class="card-body d-flex justify-content-center pt-4">
+                    <div class="card-body d-flex justify-content-center">
                         <a href="https://www.linkedin.com/in/joselsousa" target="_blank"><i class="bi bi-linkedin fs-1 me-5"></i></a>
                         <a href="https://wa.me/5587991101691" target="_blank"><i class="bi bi-whatsapp fs-1"></i></a>
                         <a href="https://t.me/JoseLSousa" target="_blank"><i class="bi bi-telegram fs-1 ms-5"></i></a>
