--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p class="fs-lg-5">
                     Olá bem vindo ao meu portfolio! Me chamo Lucas e estou cursando Análise e desenvolvimento de sistemas, tenho certificação AWS Certified Cloud Pratitioner. Estou em transição de carreira da área de Redes de Computadores para o desenvolvimento. Fique a vontade para olhar meus projetos e se precisar pode entrar em contato comigo. 😎
                 </p>
-                <a class="btn btn-primary onmousehover" href="https://tinyurl.com/3w56havk"><i class="bi bi-arrow-down-circle"></i>
+                <a class="btn btn-primary onmousehover" href="https://drive.google.com/file/d/1nWF_wa9SPsxvDsYEfznJsRXne1MqPYek/view"><i class="bi bi-arrow-down-circle"></i>
                     Baixar
                     Currículo</a>
             </div>
