Alteração do link e descrição

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <h1>José Lucas Sousa Ferreira</h1>
                 <h3 class="fs-5" style="color: #352EF2;">Desenvolvedor de Software</h3>
                 <p class="fs-lg-5">
-                    Olá bem vindo ao meu portfolio! Me chamo Lucas e estou cursando Análise e desenvolvimento de sistemas, tenho certificação AWS Certified Cloud Pratitioner. Estou em transição de carreira da área de Redes de Computadores para o desenvolvimento. Fique a vontade para olhar meus projetos e se precisar pode entrar em contato comigo. 😎
+                    Olá bem vindo ao meu portfolio! Me chamo Lucas e estou cursando Engenharia da computação, tenho certificação AWS Certified Cloud Pratitioner. Estou em transição de carreira da área de Redes de Computadores para o desenvolvimento. Fique a vontade para olhar meus projetos e se precisar pode entrar em contato comigo. 😎
                 </p>
-                <a class="btn btn-primary onmousehover" href="https://drive.google.com/file/d/1nWF_wa9SPsxvDsYEfznJsRXne1MqPYek/view"><i class="bi bi-arrow-down-circle"></i>
+                <a class="btn btn-primary onmousehover" href="https://drive.google.com/file/d/1tBvDJ5u2Z38fYAw-nqr8AKF8k2fiYeWE/view?usp=sharing"><i class="bi bi-arrow-down-circle"></i>
                     Baixar
                     Currículo</a>
             </div>
